2001-03-18  Ulrich Drepper  <drepper@redhat.com>

	* Makefile: When generating DSO link with libc_nonshared.a.

2001-02-26  Jakub Jelinek  <jakub@redhat.com>

	* signals.c (pthread_sighandler): Use CALL_SIGHANDLER.

2001-02-23  Jakub Jelinek  <jakub@redhat.com>

	* internals.h (__pthread_init_max_stacksize): New prototype.
	* attr.c (__pthread_attr_setstacksize): Call
	__pthread_init_max_stacksize if not yet initialized.
	* pthread.c (__pthread_init_max_stacksize): New function.
	(__pthread_initialize_manager): Call it.
	Patch by <dtc@cmucl.cons.org>.

2001-03-16  Ulrich Drepper  <drepper@redhat.com>

	* attr.c (pthread_getattr_np): Fix __stacksize computation for IA-64.

2001-03-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* shlib-versions: Add rule for Linux on 64 bit S/390.
	* sysdeps/s390/s390-64/pt-machine.h: New file.
	* sysdeps/unix/sysv/linux/s390/s390-64/pt-initfini.c: New file.

2001-03-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/pt-machine.h: Move to...
	* sysdeps/s390/s390-32/pt-machine.h: ...here.
	Add defines for FLOATING_STACK and ARCH_STACK_MAX_SIZE.

2001-03-15  Ulrich Drepper  <drepper@redhat.com>

	* Versions [libpthread] (GLIBC_2.2.3): Add pthread_getattr_np.
	* attr.c: Implement pthread_getattr_np.
	* sysdeps/pthread/pthread.h: Add prototype for pthread_getattr_np.
	* internals.h (struct _pthread_descr_struct): Add p_inheritsched.
	* manager.c (pthread_handle_create): Initialize p_inheritsched.

2001-03-09  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/s390/pt-initfini.c: Use 0x07 padding for
	code alignment.

2001-02-20  Hans Boehm  <hans_boehm@hp.com>

	* manager.c (manager_mask): Removed static vesion.  Now always local
	to __pthread_manager().
	(manager_mask_all): Removed completely.
	(__pthread_manager): Remove manager_mask_all initialization.
	(pthread_handle_create): Remove code to set and reset signal mask
	around __clone2() calls.

2001-02-17  Jakub Jelinek  <jakub@redhat.com>
